--- a/src/pages/Signup/signup.css
+++ b/src/pages/Signup/signup.css
@@ -5,13 +5,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: -1.2px 0 1.5px lightslategray;
 }
 
 .right-box {
     background-image: linear-gradient(360deg, #632EB5, #10071F);
     font-family: "Darker Grotesque", sans-serif;
     color: white;
-    border: 1px solid var(--cor-2);
+    border: 1px solid #9B9B9B;
     border-radius: 10px;
     padding: 1.25em;
     position: relative;
