--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .right{
     background-image: linear-gradient(180deg, #2C1650, #190B30, #030105);
     height: 100vh;
@@ -14,9 +18,10 @@
     color: white;
     border: 1px solid #9B9B9B;
     border-radius: 10px;
-    padding: 1.25em;
+    padding: 1.5em;
     position: relative;
     z-index: 1;
+    width: 50%;
 }
 
 .right-box::before {
@@ -29,6 +34,18 @@
     background-size: cover;
     opacity: 0.5;
     z-index: -1;
+}
+
+#solcred {
+    font-size: 18px;
+    text-align: left;
+    display: flex;
+    margin-top: -0.3em;
+}
+
+.right-box-content > h2 > #bracao > img {
+    width: 1.2em;
+    margin-left: 0.3em;
 }
 
 .right-box p {
@@ -49,6 +66,12 @@
     text-transform: capitalize;
     margin-bottom: .5em;
     font-size: 24px;
+    margin-right: 1em;
+}
+
+#bracao {
+    display: flex;
+    align-items: center;
 }
 
 .ent {
